--- a/ui/assets/styles/hc-light.css
+++ b/ui/assets/styles/hc-light.css
@@ -3734,8 +3734,8 @@ z-select[disabled] button,
       width: 100%;
       max-height: calc(100vh - 190px);
       max-width: inherit;
-      margin: 0 -10px 10px;
-      padding: 0 10px;
+      margin: 0 -10px 8px;
+      padding: 2px 10px;
       position: relative; }
       .overlay-dialogue.modal .overlay-dialogue-body .table-forms .table-forms-td-right {
         padding-right: 8px; }
@@ -3805,7 +3805,7 @@ z-select[disabled] button,
     .overlay-dialogue .table-forms-td-right td label {
       display: block; }
   .overlay-dialogue .dashbrd-widget-head {
-    margin: -10px -10px 6px; }
+    margin: -10px -10px 4px; }
   .overlay-dialogue .maps-container {
     max-height: 128px;
     overflow-y: auto;
